@@ -77,4 +77,5 @@ Upstream page is available at
 
 .SH "SEE ALSO"
 .BR "binfmtc-interpreter" "(1)," 
-.BR "realcsh.c" "(1)" 
+.BR "realcsh.c" "(1)," 
+.BR "realcxxsh.cc" "(1)" 
